Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIDIO.H

typedef void VOID;
typedef int INT;
typedef unsigned char BYTE;
typedef unsigned short USHORT;
typedef unsigned long ULONG;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
/**
*
*  BTIDIO Driver functions.
*
**/

BTIDIOAPI ERRVAL __stdcall BTIDIO_BankConfig(ULONG configval,USHORT threshold,USHORT samplerate,INT banknum,HCORE handleval);
BTIDIOAPI VOID __stdcall BTIDIO_BankFaultClr(BYTE mask,INT banknum,HCORE handleval);
BTIDIOAPI BYTE __stdcall BTIDIO_BankFaultRd(INT banknum,HCORE handleval);
BTIDIOAPI BOOL __stdcall BTIDIO_BankIsDIO(INT banknum,HCORE handleval);
BTIDIOAPI BYTE __stdcall BTIDIO_BankRd(INT banknum,HCORE handleval);
BTIDIOAPI BOOL __stdcall BTIDIO_BankStart(INT banknum,HCORE handleval);
BTIDIOAPI BOOL __stdcall BTIDIO_BankStop(INT banknum,HCORE handleval);
BTIDIOAPI ERRVAL __stdcall BTIDIO_BankWr(BYTE value,INT banknum,HCORE handleval);
BTIDIOAPI ERRVAL __stdcall BTIDIO_BankWrMask(BYTE value,BYTE mask,INT banknum,HCORE handleval);
BTIDIOAPI ERRVAL __stdcall BTIDIO_DiscreteConfig(ULONG configval,INT ionum,INT banknum,HCORE handleval);
BTIDIOAPI BOOL __stdcall BTIDIO_DiscreteRd(INT ionum,INT banknum,HCORE handleval);
BTIDIOAPI ERRVAL __stdcall BTIDIO_DiscreteWr(BOOL value,INT ionum,INT banknum,HCORE handleval);
BTIDIOAPI INT __stdcall BTIDIO_FIFOStatus(HCORE handleval);
BTIDIOAPI ERRVAL __stdcall BTIDIO_GapWr(INT gaptime,HCORE handleval);
/**
*
*  Internal functions used by the BTIDIO Driver.
*
**/

BTIDIOAPI ERRVAL __stdcall BTIDIO_BankCheckConfig(USHORT bankcfg,INT banknum,HCORE handleval);
BTIDIOAPI ERRVAL __stdcall BTIDIO_BankClear(INT banknum,HCORE handleval);
BTIDIOAPI INT __stdcall BTIDIO_BankGetCount(HCORE handleval);
BTIDIOAPI ULONG __stdcall BTIDIO_BankGetInfo(USHORT infotype,INT banknum,HCORE handleval);
BTIDIOAPI USHORT __stdcall BTIDIO_BankGetSampleRate(INT banknum,HCORE handleval);
BTIDIOAPI USHORT __stdcall BTIDIO_BankGetThreshold(INT banknum,HCORE handleval);
BTIDIOAPI BOOL __stdcall BTIDIO_BankIsEREG(INT banknum,HCORE handleval);
BTIDIOAPI USHORT __stdcall BTIDIO_BankSetSampleRate(USHORT samplerate,INT banknum,HCORE handleval);
BTIDIOAPI USHORT __stdcall BTIDIO_BankSetThreshold(USHORT threshold,INT banknum,HCORE handleval);
BTIDIOAPI INT __stdcall BTIDIO_DiscreteGetCount(INT banknum,HCORE handleval);
BTIDIOAPI INT __stdcall BTIDIO_DllUsageCount(VOID);
BTIDIOAPI INT __stdcall BTIDIO_GetBankCount(HCORE handleval);
BTIDIOAPI BOOL __stdcall BTIDIO_IsBank(INT banknum,HCORE handleval);
BTIDIOAPI ERRVAL __stdcall BTIDIO_TestProtocol(HCORE handleval);