Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIDIONET.VB

Imports System
Imports System.Runtime.InteropServices

Module BTIDIOVB

    '/**
    '*
    '*  BTIDIO WIN32 DRIVER  Version 1.2.1  (01/27/2015)
    '*  Copyright (c) 2005-2015
    '*  Ballard Technology, Inc.
    '*  www.ballardtech.com
    '*  support@ballardtech.com
    '*  ALL RIGHTS RESERVED
    '*
    '*  NAME:   BTIDIONET.VB -- VB.NET 32-bit/64-bit
    '*                      BTIDIO Driver Include Header File.
    '*
    '**/

    '/**
    '*
    '*  BTIDIO Driver functions.
    '*
    '**/

    '/**
    '*
    '*  Internal functions used by the BTIDIO Driver.
    '*
    '**/

    Private Class BTIDIO_32
        Public Declare Function BTIDIO_BankConfig Lib "BTIDIO.DLL" Alias "_BTIDIO_BankConfig@20" (ByVal configval As UInt32, ByVal threshold As UInt16, ByVal samplerate As UInt16, ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTIDIO_BankFaultClr Lib "BTIDIO.DLL" Alias "_BTIDIO_BankFaultClr@12" (ByVal mask As Byte, ByVal banknum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIDIO_BankFaultRd Lib "BTIDIO.DLL" Alias "_BTIDIO_BankFaultRd@8" (ByVal banknum As Int32, ByVal handleval As IntPtr) As Byte
        Public Declare Function BTIDIO_BankIsDIO Lib "BTIDIO.DLL" Alias "_BTIDIO_BankIsDIO@8" (ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_BankRd Lib "BTIDIO.DLL" Alias "_BTIDIO_BankRd@8" (ByVal banknum As Int32, ByVal handleval As IntPtr) As Byte
        Public Declare Function BTIDIO_BankStart Lib "BTIDIO.DLL" Alias "_BTIDIO_BankStart@8" (ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_BankStop Lib "BTIDIO.DLL" Alias "_BTIDIO_BankStop@8" (ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_BankWr Lib "BTIDIO.DLL" Alias "_BTIDIO_BankWr@12" (ByVal value As Byte, ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_BankWrMask Lib "BTIDIO.DLL" Alias "_BTIDIO_BankWrMask@16" (ByVal value As Byte, ByVal mask As Byte, ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_DiscreteConfig Lib "BTIDIO.DLL" Alias "_BTIDIO_DiscreteConfig@16" (ByVal configval As UInt32, ByVal ionum As Int32, ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_DiscreteRd Lib "BTIDIO.DLL" Alias "_BTIDIO_DiscreteRd@12" (ByVal ionum As Int32, ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_DiscreteWr Lib "BTIDIO.DLL" Alias "_BTIDIO_DiscreteWr@16" (ByVal value As Int32, ByVal ionum As Int32, ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_FIFOStatus Lib "BTIDIO.DLL" Alias "_BTIDIO_FIFOStatus@4" (ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_GapWr Lib "BTIDIO.DLL" Alias "_BTIDIO_GapWr@8" (ByVal gaptime As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_BankCheckConfig Lib "BTIDIO.DLL" Alias "_BTIDIO_BankCheckConfig@12" (ByVal bankcfg As UInt16, ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_BankClear Lib "BTIDIO.DLL" Alias "_BTIDIO_BankClear@8" (ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_BankGetCount Lib "BTIDIO.DLL" Alias "_BTIDIO_BankGetCount@4" (ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_BankGetInfo Lib "BTIDIO.DLL" Alias "_BTIDIO_BankGetInfo@12" (ByVal infotype As UInt16, ByVal banknum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIDIO_BankGetSampleRate Lib "BTIDIO.DLL" Alias "_BTIDIO_BankGetSampleRate@8" (ByVal banknum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIDIO_BankGetThreshold Lib "BTIDIO.DLL" Alias "_BTIDIO_BankGetThreshold@8" (ByVal banknum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIDIO_BankIsEREG Lib "BTIDIO.DLL" Alias "_BTIDIO_BankIsEREG@8" (ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_BankSetSampleRate Lib "BTIDIO.DLL" Alias "_BTIDIO_BankSetSampleRate@12" (ByVal samplerate As UInt16, ByVal banknum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIDIO_BankSetThreshold Lib "BTIDIO.DLL" Alias "_BTIDIO_BankSetThreshold@12" (ByVal threshold As UInt16, ByVal banknum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIDIO_DiscreteGetCount Lib "BTIDIO.DLL" Alias "_BTIDIO_DiscreteGetCount@8" (ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_DllUsageCount Lib "BTIDIO.DLL" Alias "_BTIDIO_DllUsageCount@0" () As Int32
        Public Declare Function BTIDIO_GetBankCount Lib "BTIDIO.DLL" Alias "_BTIDIO_GetBankCount@4" (ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_IsBank Lib "BTIDIO.DLL" Alias "_BTIDIO_IsBank@8" (ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_TestProtocol Lib "BTIDIO.DLL" Alias "_BTIDIO_TestProtocol@4" (ByVal handleval As IntPtr) As Int32
    End Class

    Private Class BTIDIO_64
        Public Declare Function BTIDIO_BankConfig Lib "BTIDIO64.DLL" Alias "BTIDIO_BankConfig" (ByVal configval As UInt32, ByVal threshold As UInt16, ByVal samplerate As UInt16, ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTIDIO_BankFaultClr Lib "BTIDIO64.DLL" Alias "BTIDIO_BankFaultClr" (ByVal mask As Byte, ByVal banknum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIDIO_BankFaultRd Lib "BTIDIO64.DLL" Alias "BTIDIO_BankFaultRd" (ByVal banknum As Int32, ByVal handleval As IntPtr) As Byte
        Public Declare Function BTIDIO_BankIsDIO Lib "BTIDIO64.DLL" Alias "BTIDIO_BankIsDIO" (ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_BankRd Lib "BTIDIO64.DLL" Alias "BTIDIO_BankRd" (ByVal banknum As Int32, ByVal handleval As IntPtr) As Byte
        Public Declare Function BTIDIO_BankStart Lib "BTIDIO64.DLL" Alias "BTIDIO_BankStart" (ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_BankStop Lib "BTIDIO64.DLL" Alias "BTIDIO_BankStop" (ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_BankWr Lib "BTIDIO64.DLL" Alias "BTIDIO_BankWr" (ByVal value As Byte, ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_BankWrMask Lib "BTIDIO64.DLL" Alias "BTIDIO_BankWrMask" (ByVal value As Byte, ByVal mask As Byte, ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_DiscreteConfig Lib "BTIDIO64.DLL" Alias "BTIDIO_DiscreteConfig" (ByVal configval As UInt32, ByVal ionum As Int32, ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_DiscreteRd Lib "BTIDIO64.DLL" Alias "BTIDIO_DiscreteRd" (ByVal ionum As Int32, ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_DiscreteWr Lib "BTIDIO64.DLL" Alias "BTIDIO_DiscreteWr" (ByVal value As Int32, ByVal ionum As Int32, ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_FIFOStatus Lib "BTIDIO64.DLL" Alias "BTIDIO_FIFOStatus" (ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_GapWr Lib "BTIDIO64.DLL" Alias "BTIDIO_GapWr" (ByVal gaptime As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_BankCheckConfig Lib "BTIDIO64.DLL" Alias "BTIDIO_BankCheckConfig" (ByVal bankcfg As UInt16, ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_BankClear Lib "BTIDIO64.DLL" Alias "BTIDIO_BankClear" (ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_BankGetCount Lib "BTIDIO64.DLL" Alias "BTIDIO_BankGetCount" (ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_BankGetInfo Lib "BTIDIO64.DLL" Alias "BTIDIO_BankGetInfo" (ByVal infotype As UInt16, ByVal banknum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIDIO_BankGetSampleRate Lib "BTIDIO64.DLL" Alias "BTIDIO_BankGetSampleRate" (ByVal banknum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIDIO_BankGetThreshold Lib "BTIDIO64.DLL" Alias "BTIDIO_BankGetThreshold" (ByVal banknum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIDIO_BankIsEREG Lib "BTIDIO64.DLL" Alias "BTIDIO_BankIsEREG" (ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_BankSetSampleRate Lib "BTIDIO64.DLL" Alias "BTIDIO_BankSetSampleRate" (ByVal samplerate As UInt16, ByVal banknum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIDIO_BankSetThreshold Lib "BTIDIO64.DLL" Alias "BTIDIO_BankSetThreshold" (ByVal threshold As UInt16, ByVal banknum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIDIO_DiscreteGetCount Lib "BTIDIO64.DLL" Alias "BTIDIO_DiscreteGetCount" (ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_DllUsageCount Lib "BTIDIO64.DLL" Alias "BTIDIO_DllUsageCount" () As Int32
        Public Declare Function BTIDIO_GetBankCount Lib "BTIDIO64.DLL" Alias "BTIDIO_GetBankCount" (ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_IsBank Lib "BTIDIO64.DLL" Alias "BTIDIO_IsBank" (ByVal banknum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIDIO_TestProtocol Lib "BTIDIO64.DLL" Alias "BTIDIO_TestProtocol" (ByVal handleval As IntPtr) As Int32
    End Class
